# smbl

./: '  README.md  domain.py  main.py  operation.py  pyproject.toml  smbl.py  test.py
smbl/: __init__.py  domain.py  expression.py  function.py  integral.py  operation.py  operation_handler.py  relation.py  var.py
smbl/algebra/: __init__.py  euclidean_space.py  matrix.py  vector.py
smbl/relations/: __init__.py  binary_relation.py  properties.py  relation.py
tests/: test_domain.py  test_equal.py
